Agents setup & Classroom Member payment plans
