# src/main/java/tech/sangdang/lmscoreapi/modules/management/dom/PaymentPlanType.java
@@ -1,0 +1,5 @@
+package tech.sangdang.lmscoreapi.modules.management.dom;
+
+public enum PaymentPlanType {
+  PER_SESSION
+}
